🚀 feat(_test): language update

--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -1,14 +1,12 @@
 ---
-title: Welcome to Starlight
+title: SNIGDHA OS
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
   tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
   actions:
     - text: Example Guide
-      link: /guides/example/
+      link: /introduction/example/
       icon: right-arrow
     - text: Read the Starlight docs
       link: https://starlight.astro.build
