🚀 feat(local): add translate

--- a/src/content/docs/bn/index.mdx
+++ b/src/content/docs/bn/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: একটি নতুন স্টারলাইট প্রজেক্ট সেটআপ করার জন্য অভিনন্দন!
   actions:
     - text: উদাহরণ গাইড
-      link: introduction/example/
+      link: /bn/introduction/overview/
       icon: right-arrow
     - text: স্টারলাইট ডকস পড়ুন
       link: https://starlight.astro.build
