--- a/src/content/docs/hi/index.mdx
+++ b/src/content/docs/hi/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: एक नया Starlight प्रोजेक्ट सेटअप करने पर बधाई!
   actions:
     - text: उदाहरण गाइड
-      link: introduction/example/
+      link: /hi/introduction/overview/
       icon: right-arrow
     - text: Starlight डॉक्स पढ़ें
       link: https://starlight.astro.build
