📝 docs(_translate): both hindi and bengali

--- a/src/content/docs/bn/index.mdx
+++ b/src/content/docs/bn/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: স্নিগ্ধা ওএস
-description: পেনিট্রেশন টেস্টিং এবং এথিক্যাল হ্যাকিং এর জন্য একটি আর্চ-ভিত্তিক লিনাক্স ডিস্ট্রিবিউশন।
+title: SNIGDHA OS
+description: পেনিট্রেশন টেস্টিং এবং এথিক্যাল হ্যাকিংয়ের জন্য একটি Arch ভিত্তিক লিনাক্স ডিস্ট্রিবিউশন।
 template: splash
 hero:
-  tagline: পেনিট্রেশন টেস্টিং এবং এথিক্যাল হ্যাকিং এর জন্য একটি আর্চ-ভিত্তিক লিনাক্স ডিস্ট্রিবিউশন
+  tagline: পেনিট্রেশন টেস্টিং এবং এথিক্যাল হ্যাকিংয়ের জন্য Arch ভিত্তিক লিনাক্স ডিস্ট্রিবিউশন
   actions:
-    - text: ডকুমেন্টেশন দেখুন
+    - text: ডকুমেন্টেশনে যান
       link: /docs/bn/introduction/overview/
       icon: rocket
-    - text: স্নিগ্ধা ওএস ডাউনলোড করুন
+    - text: Snigdha OS ডাউনলোড করুন
       link: https://starlight.astro.build
       icon: external
       variant: minimal
@@ -18,27 +18,42 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## ডেভেলপার এবং অবদানকারীদের জন্য
 
 <CardGrid stagger>
-    <Card title="আমাদের কন্টেন্ট অনুবাদে সাহায্য করুন" icon="translate">
-      <p>আমরা সবসময় আমাদের ডকুমেন্টেশন আরও ভাষায় উপলব্ধ করার জন্য কাজ করছি। আপনার সাহায্য একটি বড় পরিবর্তন আনতে পারে!</p>
-      যদি আপনি আগ্রহী হন, তাহলে <code>src/content/docs/bn/index.mdx</code> ফাইলটি সম্পাদনা করুন এবং আপনার অনুবাদ যুক্ত করে এই পেজটিকে উন্নত করুন।
-      <p>কীভাবে অবদান রাখতে হয় তা জানতে আমাদের <a href="/bn/contributing/">অবদান গাইড</a> দেখুন।</p>
+    <Card title="🌍 আমাদের কনটেন্ট অনুবাদ করতে সাহায্য করুন" icon="language">
+      <p>আমরা আমাদের ডকুমেন্টেশন আরও ভাষায় অ্যাক্সেসযোগ্য করার জন্য সর্বদা কাজ করছি। আপনার সাহায্য অনেক পার্থক্য করতে পারে!</p>
+      যদি আপনি আগ্রহী হন, তাহলে <code>src/content/docs/en/index.mdx</code> ফাইলটি সম্পাদনা করে আপনার অনুবাদ যোগ করুন এবং এই পৃষ্ঠাটি আরও উন্নত করুন।
+      <p>অবদান দেওয়ার জন্য নির্দেশনার জন্য, আমাদের <a href="/bn/contributing/">অবদান গাইড</a> দেখুন।</p>
     </Card>
-    <Card title="নতুন কন্টেন্ট যোগ করুন" icon="add-document">
-      <p>আপনি কি আমাদের ডকুমেন্টেশন আরও বিস্তৃত করতে চান? নতুন পেজ তৈরি করতে <code>src/content/docs/bn/</code> তে মার্কডাউন বা এমডিএক্স ফাইল যোগ করুন।</p>
-      <p>আপনার কন্টেন্ট গঠনের জন্য টিপস পেতে আমাদের <a href="/bn/contributing/">অবদান গাইড</a> দেখুন।</p>
+    <Card title="✍️ নতুন কনটেন্ট যোগ করুন" icon="file-add">
+      <p>আপনি কি আমাদের ডকুমেন্টেশন সম্প্রসারিত করতে চান? <code>src/content/docs/en/</code> ফোল্ডারে Markdown বা MDX ফাইল যোগ করে নতুন পৃষ্ঠা তৈরি করুন।</p>
+      <p>কনটেন্ট গঠন সম্পর্কে টিপসের জন্য আমাদের <a href="/bn/contributing/">অবদান গাইড</a> দেখুন।</p>
     </Card>
-    <Card title="নতুন ভাষা যোগ করুন" icon="setting">
-      নতুন ভাষা যোগ করতে, উদাহরণস্বরূপ `ru` নামে একটি ফোল্ডার ডকুমেন্ট ফোল্ডারে তৈরি করুন।
-      ```
-      src/content/docs/
-                    ├── en/
-                    │   └── index.mdx    // হোমপেজের ইংরেজি সংস্করণ
-                    ├── hi/
-                    │   └── index.mdx    // হোমপেজের হিন্দি সংস্করণ
-                    ├── bn/
-                    │   └── index.mdx    // হোমপেজের বাংলা সংস্করণ
-                    └── ru/
-                        └── index.mdx    // প্রয়োজন হলে হোমপেজের রুশ সংস্করণ
-      ```
+    <Card title="🌐 নতুন ভাষা যোগ করুন" icon="language">
+      <p>নতুন ভাষা যোগ করতে, ডকুমেন্ট ফোল্ডারে একটি নতুন ফোল্ডার (যেমন `ru`) তৈরি করুন। এই ফোল্ডারে হোমপেজের জন্য <code>index.mdx</code> এবং সংশ্লিষ্ট অনুবাদ ফাইল থাকতে হবে।</p>
+      <pre><code>
+src/content/docs/
+  ├── en/
+  │   └── index.mdx    // ইংরেজি সংস্করণের হোমপেজ
+  ├── hi/
+  │   └── index.mdx    // হিন্দি সংস্করণের হোমপেজ
+  ├── bn/
+  │   └── index.mdx    // বাংলা সংস্করণের হোমপেজ
+  └── ru/
+      └── index.mdx    // রুশ সংস্করণ (যদি প্রয়োজন)
+      </code></pre>
+    </Card>
+    <Card title="📊 ডকুমেন্টেশনের কাঠামো উন্নত করুন" icon="structure">
+      <p>আমাদের ডকুমেন্টেশনের কাঠামো উন্নত করতে সাহায্য করুন! কনটেন্ট সংগঠিত করুন, নতুন বিভাগ তৈরি করুন, অথবা প্রবাহ এবং পাঠযোগ্যতা উন্নত করার জন্য পরিবর্তন প্রস্তাব করুন।</p>
+      <p>কাঠামোগত পরিবর্তনের জন্য, একটি ইস্যু খুলুন এবং আপডেট করার আগে এটি আলোচনা করুন। আপনার প্রতিক্রিয়া মূল্যবান! 📝</p>
+    </Card>
+    <Card title="🐞 ডকুমেন্টেশনে বাগ বা ত্রুটি ঠিক করুন" icon="bug">
+      <p>আপনি যদি আমাদের ডকুমেন্টেশনে কোনো টাইপো, ভাঙা লিংক, বা ত্রুটি দেখতে পান, তাহলে একটি দ্রুত সংশোধন জমা দিন! এটি একটি সহজ উপায় প্রভাব ফেলতে এবং ব্যবহারকারীর অভিজ্ঞতা উন্নত করতে।</p>
+      <p>আমাদের GitHub রিপোজিটরিতে <code>documentation</code> লেবেলযুক্ত ইস্যুগুলি দেখুন এবং বাগ বা উন্নতি ঠিক করতে সাহায্য করুন।</p>
+    </Card>
+    <Card title="📚 টিউটোরিয়াল এবং গাইডে সহায়তা করুন" icon="book-open">
+      <p>টিউটোরিয়াল, স্টেপ-বাই-স্টেপ গাইড বা নতুন ব্যবহারকারীদের জন্য ট্রাবলশুটিং টিপস অবদান করুন। এই রিসোর্সগুলি ব্যবহারকারীদের Snigdha OS-এর সাথে দ্রুত শুরু করতে সাহায্য করতে পারে।</p>
+      <p>প্রেরণার জন্য আমাদের <a href="/bn/docs/">ডকুমেন্টেশন পৃষ্ঠা</a> দেখুন এবং আপনার নিজস্ব টিউটোরিয়াল জমা দিন! 📖</p>
+    </Card>
+    <Card title="📢 Snigdha OS প্রচার করুন" icon="megaphone">
+      <p>শব্দ ছড়ান! আপনি যদি Snigdha OS পছন্দ করেন, তবে আমাদের প্রচারে সাহায্য করুন। ব্লগ পোস্ট লিখুন, ভিডিও তৈরি করুন, অথবা সোশ্যাল মিডিয়ায় Snigdha OS নিয়ে শেয়ার করুন। প্রতিটি প্রচার কমিউনিটিকে বাড়াতে সাহায্য করে। 🌍</p>
     </Card>
 </CardGrid>
