--- a/src/content/docs/hi/index.mdx
+++ b/src/content/docs/hi/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: स्निग्धा ओएस
-description: पेनिट्रेशन टेस्टिंग और एथिकल हैकिंग के लिए एक आर्च-आधारित लिनक्स वितरण।
+title: SNIGDHA OS
+description: पेनिट्रेशन टेस्टिंग और एथिकल हैकिंग के लिए एक Arch आधारित लिनक्स वितरण।
 template: splash
 hero:
-  tagline: पेनिट्रेशन टेस्टिंग और एथिकल हैकिंग के लिए आर्च-आधारित लिनक्स वितरण
+  tagline: पेनिट्रेशन टेस्टिंग और एथिकल हैकिंग के लिए Arch आधारित लिनक्स वितरण
   actions:
-    - text: प्रलेखन पर जाएं
+    - text: दस्तावेज़ पर जाएं
       link: /docs/hi/introduction/overview/
       icon: rocket
-    - text: स्निग्धा ओएस डाउनलोड करें
+    - text: Snigdha OS डाउनलोड करें
       link: https://starlight.astro.build
       icon: external
       variant: minimal
@@ -18,27 +18,42 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## डेवलपर्स और योगदानकर्ताओं के लिए
 
 <CardGrid stagger>
-    <Card title="हमें अपनी सामग्री अनुवाद करने में मदद करें" icon="translate">
-      <p>हम अपनी प्रलेखन को अधिक भाषाओं में उपलब्ध कराने के लिए हमेशा तत्पर रहते हैं। आपकी मदद बहुत बड़ा अंतर ला सकती है!</p>
-      यदि आप रुचि रखते हैं, तो <code>src/content/docs/hi/index.mdx</code> फाइल को संपादित करें और अपने अनुवादों से इस पेज को बेहतर बनाएं।
-      <p>योगदान देने के लिए मार्गदर्शन पाने के लिए, हमारे <a href="/hi/contributing/">योगदान गाइड</a> पर जाएं।</p>
+    <Card title="🌍 हमारे सामग्री का अनुवाद करने में मदद करें" icon="language">
+      <p>हम लगातार अपनी दस्तावेज़ों को अधिक भाषाओं में सुलभ बनाने का प्रयास कर रहे हैं। आपकी मदद बड़ा फर्क डाल सकती है!</p>
+      यदि आप रुचि रखते हैं, तो <code>src/content/docs/en/index.mdx</code> फ़ाइल को संपादित करके अपनी अनुवाद जोड़ें और इस पृष्ठ को बेहतर बनाएं।
+      <p>योगदान करने के लिए मार्गदर्शन के लिए, हमारी <a href="/hi/contributing/">योगदान गाइड</a> देखें।</p>
     </Card>
-    <Card title="नई सामग्री जोड़ें" icon="add-document">
-      <p>क्या आप हमारी प्रलेखन को विस्तृत करना चाहते हैं? नए पेज आसानी से बनाने के लिए <code>src/content/docs/hi/</code> में मार्कडाउन या एमडीएक्स फाइलें जोड़ें।</p>
-      <p>अपनी सामग्री की संरचना के लिए सुझाव पाने के लिए हमारे <a href="/hi/contributing/">योगदान गाइड</a> पर जाएं।</p>
+    <Card title="✍️ नई सामग्री जोड़ें" icon="file-add">
+      <p>क्या आप हमारे दस्तावेज़ को विस्तार से जोड़ना चाहते हैं? <code>src/content/docs/en/</code> में Markdown या MDX फ़ाइलें जोड़ें और नए पृष्ठों को आसानी से बनाएं।</p>
+      <p>सामग्री संरचना के लिए टिप्स के लिए हमारी <a href="/hi/contributing/">योगदान गाइड</a> देखें।</p>
     </Card>
-    <Card title="नई भाषा जोड़ें" icon="setting">
-      नई भाषा जोड़ने के लिए, उदाहरण के लिए `ru` नामक एक फोल्डर डॉक्यूमेंट फोल्डर में बनाएं।
-      ```
-      src/content/docs/
-                    ├── en/
-                    │   └── index.mdx    // होमपेज का अंग्रेज़ी संस्करण
-                    ├── hi/
-                    │   └── index.mdx    // होमपेज का हिंदी संस्करण
-                    ├── bn/
-                    │   └── index.mdx    // होमपेज का बंगाली संस्करण
-                    └── ru/
-                        └── index.mdx    // यदि आवश्यक हो, तो होमपेज का रूसी संस्करण
-      ```
+    <Card title="🌐 नई भाषा जोड़ें" icon="language">
+      <p>नई भाषा जोड़ने के लिए, दस्तावेज़ फ़ोल्डर में एक नया फ़ोल्डर (जैसे `ru`) बनाएं। इस फ़ोल्डर में होमपेज के लिए <code>index.mdx</code> और संबंधित अनुवाद फ़ाइलें होनी चाहिए।</p>
+      <pre><code>
+src/content/docs/
+  ├── en/
+  │   └── index.mdx    // अंग्रेजी संस्करण होमपेज
+  ├── hi/
+  │   └── index.mdx    // हिंदी संस्करण होमपेज
+  ├── bn/
+  │   └── index.mdx    // बांग्ला संस्करण होमपेज
+  └── ru/
+      └── index.mdx    // रूसी संस्करण (यदि आवश्यक हो)
+      </code></pre>
+    </Card>
+    <Card title="📊 दस्तावेज़ संरचना में सुधार करें" icon="structure">
+      <p>हमारी दस्तावेज़ संरचना को सुधारने में मदद करें! सामग्री का संगठन करें, नए खंड बनाएं, या प्रवाह और पठनीयता को बेहतर बनाने के लिए बदलावों का सुझाव दें।</p>
+      <p>संरचनात्मक बदलावों के लिए, कृपया एक मुद्दा खोलें और अपडेट करने से पहले इसे चर्चा में लाएं। आपका फीडबैक महत्वपूर्ण है! 📝</p>
+    </Card>
+    <Card title="🐞 दस्तावेज़ में बग या त्रुटियों को ठीक करें" icon="bug">
+      <p>यदि आप हमारी दस्तावेज़ में कोई टाइपो, टूटी लिंक, या त्रुटि देखते हैं, तो एक त्वरित सुधार जमा करें! यह एक साधारण तरीका है प्रभाव डालने का और उपयोगकर्ता अनुभव को बेहतर बनाने का।</p>
+      <p>हमारे GitHub रिपॉज़िटरी में <code>documentation</code> लेबल वाले मुद्दों को देखें और बग या सुधारों को ठीक करने में मदद करें।</p>
+    </Card>
+    <Card title="📚 ट्यूटोरियल्स और गाइड में मदद करें" icon="book-open">
+      <p>ट्यूटोरियल, स्टेप-बाय-स्टेप गाइड, या नए उपयोगकर्ताओं के लिए ट्रबलशूटिंग टिप्स का योगदान करें। ये संसाधन उपयोगकर्ताओं को Snigdha OS के साथ जल्दी से शुरू करने में मदद कर सकते हैं।</p>
+      <p>प्रेरणा के लिए हमारी <a href="/hi/docs/">दस्तावेज़ पृष्ठों</a> को देखें और अपना खुद का ट्यूटोरियल सबमिट करें! 📖</p>
+    </Card>
+    <Card title="📢 Snigdha OS का प्रचार करें" icon="megaphone">
+      <p>शब्द फैलाएं! यदि आप Snigdha OS को पसंद करते हैं, तो हमें बढ़ावा देने में मदद करें। ब्लॉग पोस्ट लिखें, वीडियो बनाएं, या सोशल मीडिया पर Snigdha OS के बारे में साझा करें। हर प्रचार समुदाय को बढ़ाने में मदद करता है। 🌍</p>
     </Card>
 </CardGrid>
